<resources>
    <string name="app_name">EMS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_businessTag">Business Tag</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Action Settings</string>
    <string name="account_info">Account Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="text_favorites">favourites</string>
    <string name="text_schedules">schedule</string>
    <string name="text_music">music</string>
    <string name="text_log_work">Log Work</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_clients">Clients</string>
    <string name="text_history">History</string>
    <string name="text_dashboard">Dashboard</string>

    <string name="text_time_spent">Time Spent</string>
    <string name="array_0.5">0.5 Hours</string>
    <string name="array_1">1 Hours</string>
    <string name="array_1.5">1.5 Hours</string>
    <string name="array_2">2 Hours</string>
    <string name="title_activity_maps">Map</string>

    <!-- Weather Widget -->
    <string name="city_country">Enugu, Nigeria</string>
    <string name="date_today">Friday, 8 July</string>
    <string name="current_temperature">26</string>
    <string name="weather_information">Partly Cloud</string>
    <string name="temp_information">26, partly cloudy</string>
    <string name="wind">WIND</string>
    <string name="wind_speed">18 km/h</string>
    <string name="humidity">HUMIDITY</string>
    <string name="humidity_rate">73%</string>
    <string name="day_of_week">Mon</string>
    <string name="location_hints">Type city or postcode</string>
    <string name="location_example">Example Malmo, Sweden</string>
    <string name="add_new_location">Add new location</string>
    <string name="stored_location">You can only store 5 locations</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="go_to_location">Go to location setting</string>

    <!-- Validation -->
    <string name="name_error">Enter a valid name</string>
    <string name="description_error">Enter a valid description</string>
    <string name="postcode_error">Enter a valid postcode</string>
    <string name="date_error">Enter a valid date</string>
    <string name="time_error">Enter a valid time</string>


</resources>
