<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/action_log_work"
            android:enabled="true"
            android:icon="@drawable/ic_action_add_data"
            android:title="@string/text_log_work"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_history"
            android:enabled="true"
            android:icon="@drawable/ic_action_history"
            android:title="@string/text_history"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_dashboard"
            android:enabled="true"
            android:icon="@drawable/ic_action_dashboard"
            android:title="@string/text_dashboard"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_clients"
            android:enabled="true"
            android:icon="@drawable/ic_action_clients"
            android:title="@string/text_clients"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_calendar"
            android:enabled="true"
            android:icon="@drawable/ic_action_place"
            android:title="@string/text_client_location"
            app:showAsAction="ifRoom" />

</menu>