<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <android.support.v7.widget.CardView
            android:id="@+id/dashboard_weather_view"
            style="@style/MyCardViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">


            <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/city_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:text="@string/city_country"
                        android:textColor="@color/colorWhite"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/current_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/date_today"
                        android:textColor="@color/colorWhite"
                        android:textSize="14dp" />

                    <ImageView
                        android:id="@+id/weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_sun" />

                    <com.github.pavlospt.CircleView
                        android:id="@+id/weather_result"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        app:cv_backgroundColorValue="@color/colorCircleStroke"
                        app:cv_fillColor="@color/colorBackground"
                        app:cv_strokeColorValue="@color/colorCircleStroke"
                        app:cv_subtitleSize="12dp"
                        app:cv_subtitleText="@string/weather_information"
                        app:cv_titleColor="@color/colorWhite"
                        app:cv_titleSize="50dp"
                        app:cv_titleSubtitleSpace="40"
                        app:cv_titleText="@string/current_temperature" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingLeft="16dp">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textColor="@color/colorSubTitle"
                                android:textSize="14dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/wind_result"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/wind_speed"
                                android:textColor="@color/colorWhite"
                                android:textSize="14dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:paddingRight="16dp">


                            <TextView
                                android:id="@+id/humidity_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|right"
                                android:text="@string/humidity"
                                android:textColor="@color/colorSubTitle"
                                android:textSize="14dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/humidity_result"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginTop="4dp"
                                android:text="@string/humidity_rate"
                                android:textColor="@color/colorWhite"
                                android:textSize="14dp" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/top_employee_view"
            style="@style/MyCardViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_below="@+id/dashboard_weather_view"
            android:paddingTop="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/top_employees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Top Employees"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/top_employees_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top_employees"
                    android:orientation="horizontal">

                    <ListView
                        android:id="@+id/top_employee_firstname"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/top_employees"
                        android:layout_margin="2dp"
                        android:layout_weight=".5" />

                    <ListView
                        android:id="@+id/top_employee_surname"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/top_employees"
                        android:layout_margin="2dp"
                        android:layout_weight=".5" />


                    <ListView
                        android:id="@+id/top_employee_hours_worked"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/top_employees"
                        android:layout_margin="2dp"
                        android:layout_weight=".5" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/top_client_view"
            style="@style/MyCardViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/top_employee_view"
            android:paddingTop="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/top_clients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Top Clients"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/top_clients_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top_clients"
                    android:orientation="horizontal">

                    <ListView
                        android:id="@+id/top_client_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/top_employees"
                        android:layout_margin="2dp"
                        android:layout_weight=".5" />


                    <ListView
                        android:id="@+id/top_client_hours_worked"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/top_employees"
                        android:layout_margin="2dp"
                        android:layout_weight=".5" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>